--- a/SimpleStore.Business/SimpleStore.Business.csproj
+++ b/SimpleStore.Business/SimpleStore.Business.csproj
@@ -1,11 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
     <ProjectReference Include="..\SimpleStore.Data\SimpleStore.Data.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Automapper" Version="12.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
   </ItemGroup>
 
